--- a/view/frontend/templates/cart_buttons.phtml
+++ b/view/frontend/templates/cart_buttons.phtml
@@ -285,7 +285,7 @@ if ($block->getFibankStatus() == "1") {
                                 <div
                                     class="fibank_btn"
                                     id="fibank_buy_credit"
-                                >Добави в количката</div>
+                                >Приключване на поръчката</div>
                                 <div
                                     class="fibank_btn_cancel"
                                     id="fibank_back_credit"
